--- a/Makefile.am
+++ b/Makefile.am
@@ -7,4 +7,4 @@ man_MANS = abuse-sdl.6
 datafiledir = $(datadir)/games/abuse
 datafile_DATA = abuse.bmp abuse.lsp abuse.png
 
-EXTRA_DIST = abuse-sdl.6 abuse.bmp abuse.lsp abuse.png
+EXTRA_DIST = bootstrap abuse-sdl.6 abuse.bmp abuse.lsp abuse.png
