* Fix a few more warnings.   * Remove -Wshadow from the warnings because it is too verbose for now.   * Remove warning flags that have no meaning in C++.

--- a/configure.ac
+++ b/configure.ac
@@ -44,7 +44,7 @@ LIBS="$LIBS $SDL_LIBS $X_LIBS -L/usr/lib"
 # Optimizations
 CPPFLAGS="${CPPFLAGS} -g -O2 -fno-strength-reduce -fomit-frame-pointer"
 # Code qui fait des warnings == code de porc == deux baffes dans ta gueule
-CPPFLAGS="${CPPFLAGS} -Wall -Wpointer-arith -Wcast-align -Wcast-qual -Wstrict-prototypes -Wshadow -Waggregate-return -Wmissing-prototypes -Wnested-externs -Wsign-compare"
+CPPFLAGS="${CPPFLAGS} -Wall -Wpointer-arith -Wcast-align -Wcast-qual -Waggregate-return -Wsign-compare"
 
 dnl Checks for header files
 AC_HEADER_DIRENT
