* Rename everything to "abuse" instead of "abuse-sdl".

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,9 +2,9 @@
 
 SUBDIRS = src
 
-man_MANS = abuse-sdl.6
+man_MANS = abuse.6
 
 datafiledir = $(datadir)/games/abuse
 datafile_DATA = abuse.bmp abuse.lsp abuse.png
 
-EXTRA_DIST = bootstrap abuse-sdl.6 abuse.bmp abuse.lsp abuse.png
+EXTRA_DIST = bootstrap abuse.6 abuse.bmp abuse.lsp abuse.png
