* Moved some LISP stuff into src/lisp and removed unused lisp_mac.cpp file.

--- a/configure.ac
+++ b/configure.ac
@@ -86,6 +86,7 @@ AC_OUTPUT([
     Makefile
     abuse.6
     src/Makefile
+    src/lisp/Makefile
     src/net/Makefile
     src/imlib/Makefile
     src/sdlport/Makefile])
