--- a/src/net/Makefile.am
+++ b/src/net/Makefile.am
@@ -1,7 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 noinst_LIBRARIES = libnet.a
 
-libnet_a_SOURCES = gserver.cpp gclient.cpp fileman.cpp sock.cpp tcpip.cpp
+libnet_a_SOURCES = \
+    gserver.cpp gserver.hpp \
+    gclient.cpp gclient.hpp \
+    fileman.cpp fileman.hpp \
+    sock.cpp sock.hpp \
+    tcpip.cpp tcpip.hpp \
+    indian.hpp ghandler.hpp undrv.hpp \
+    $(NULL)
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib
 
