--- a/src/net/Makefile.am
+++ b/src/net/Makefile.am
@@ -10,6 +10,6 @@ libnet_a_SOURCES = \
     indian.hpp ghandler.hpp undrv.hpp \
     $(NULL)
 
-INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib
+INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
 CPPFLAGS = @CPPFLAGS@ -DMANAGE_MEM -DNO_CHECK
