--- a/src/imlib/Makefile.am
+++ b/src/imlib/Makefile.am
@@ -45,4 +45,4 @@ libimlib_a_SOURCES = \
 
 INCLUDES = -I$(srcdir) $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DMANAGE_MEM -DNO_CHECK
+CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
