--- a/src/lisp/Makefile.am
+++ b/src/lisp/Makefile.am
@@ -11,4 +11,4 @@ liblisp_a_SOURCES = \
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DMANAGE_MEM -DNO_CHECK
+CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
