core: Get rid of mostly useless headers, move endianness handling to common.h (and rewrite functions so that they do not need the SDL headers) and move a few functions out of sdlport's video.cpp. These functions were in the original video.cpp (which reappears) and shouldn't be part of the SDL port.

--- a/src/imlib/Makefile.am
+++ b/src/imlib/Makefile.am
@@ -25,8 +25,8 @@ libimlib_a_SOURCES = \
     guistat.cpp guistat.h \
     sprite.cpp sprite.h \
     jwindow.cpp jwindow.h \
-    macs.h video.h event.h mouse.h timing.h jdir.h \
-    system.h \
+    video.cpp video.h \
+    event.h mouse.h timing.h jdir.h \
     $(NULL)
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/.. $(SDL_CFLAGS)
