build: try to autodetect SDL_Mixer upon build.

--- a/configure.ac
+++ b/configure.ac
@@ -46,10 +46,16 @@ AM_PATH_SDL($SDL_VERSION, :,
 CFLAGS="$CFLAGS $SDL_CFLAGS"
 LIBS="$LIBS $SDL_LIBS $X_LIBS"
 
-# Add SDL_Mixer
-LIBS="$LIBS -lSDL_mixer"
-CFLAGS="${CFLAGS} -DUSE_SDL_MIXER"
-CPPFLAGS="${CPPFLAGS} -DUSE_SDL_MIXER"
+dnl Check for SDL mixer
+ac_cv_my_have_sdl_mixer="no"
+save_CPPFLAGS="${CPPFLAGS}"
+CPPFLAGS="${CPPFLAGS} ${SDL_CFLAGS}"
+AC_CHECK_HEADERS(SDL/SDL_mixer.h, [ac_cv_my_have_sdl="yes"])
+CPPFLAGS="${save_CPPFLAGS}"
+if test "${ac_cv_my_have_sdl}" != "no"; then
+  AC_DEFINE(USE_SDL_MIXER, 1, Define to 1 to use SDL_Mixer)
+  LIBS="$LIBS -lSDL_mixer"
+fi
 
 if test "${enable_debug}" = "yes"; then
   AC_DEFINE(HAVE_DEBUG, 1, Define to 1 to activate debug)
