lol: add the cross-platform Timer class from Lol Engine.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,7 @@ abuse_SOURCES = \
     common.h \
     \
     lol/matrix.cpp lol/matrix.h \
+    lol/timer.cpp lol/timer.h \
     \
     specache.cpp specache.h \
     netcfg.cpp netcfg.h \
