--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ SUBDIRS = src
 man_MANS = abuse.6
 
 datafiledir = $(datadir)/games/abuse
-datafile_DATA = abuse.bmp abuse.lsp abuse.png
+datafile_DATA = abuse.bmp abuse.png
 
-EXTRA_DIST = bootstrap abuse.6 abuse.bmp abuse.lsp abuse.png
+EXTRA_DIST = bootstrap abuse.6 abuse.bmp abuse.png
+
