--- a/Makefile.am
+++ b/Makefile.am
@@ -2,10 +2,10 @@
 
 SUBDIRS = src
 
-man_MANS = abuse.6
+man_MANS = abuse.6 abuse-tool.6
 
 datafiledir = $(datadir)/games/abuse
 datafile_DATA = abuse.bmp abuse.png
 
-EXTRA_DIST = bootstrap abuse.6 abuse.bmp abuse.png
+EXTRA_DIST = bootstrap abuse.bmp abuse.png
 
