doc: put manual pages in the doc/ directory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src data
-
-man_MANS = abuse.6 abuse-tool.6
+SUBDIRS = src data doc
 
 datafiledir = $(datadir)/games/abuse
 datafile_DATA = abuse.bmp abuse.png
