doc: add more detailed copying information.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = src data doc
 datafiledir = $(datadir)/games/abuse
 datafile_DATA = abuse.bmp abuse.png
 
-EXTRA_DIST = PACKAGERS bootstrap abuse.bmp abuse.png
+EXTRA_DIST = COPYING.GPL COPYING.WTFPL PACKAGERS bootstrap abuse.bmp abuse.png
 
 if HAVE_NONFREE
 else
