--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,8 @@
 
 man_MANS = abuse.6 abuse-tool.6
 
+datafiledir = $(datadir)/games/abuse
+datafile_DATA = abuse.bmp abuse.png
+
+EXTRA_DIST = $(datafile_DATA)
+
