doc: add Antti to the list of packagers, and add a warning message when building a full tarball.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,13 +4,14 @@ SUBDIRS = src data doc
 
 EXTRA_DIST = COPYING.GPL COPYING.WTFPL PACKAGERS bootstrap
 
-if HAVE_NONFREE
-else
 dist-hook:
 	@echo ""
 	@echo "          ===================================================="
+if HAVE_NONFREE
+	@echo "            WARNING: This tarball will contain non-free data"
+else
 	@echo "            WARNING: This tarball will exclude non-free data"
+endif
 	@echo "          ===================================================="
 	@echo ""
-endif
 
