--- a/src/sdlport/Makefile.am
+++ b/src/sdlport/Makefile.am
@@ -18,5 +18,5 @@ libsdlport_a_LIBADD =
 
 INCLUDES = -I$(srcdir)/../ -I$(srcdir)/../imlib $(SDL_CFLAGS)
 
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK -DASSETSDIR=\"$(datadir)/games/abuse\"
+CPPFLAGS = @CPPFLAGS@ -DNO_CHECK -DASSETDIR=\"$(assetdir)\"
 
