doc: fix icons install location.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,8 +1,7 @@
 
 man_MANS = abuse.6 abuse-tool.6
 
-datafiledir = $(datadir)/games/abuse
-datafile_DATA = abuse.bmp abuse.png
+asset_DATA = abuse.bmp abuse.png
 
-EXTRA_DIST = $(datafile_DATA)
+EXTRA_DIST = $(asset_DATA)
 
