imlib: merge JCMouse into EventHandler.

--- a/src/imlib/Makefile.am
+++ b/src/imlib/Makefile.am
@@ -26,7 +26,7 @@ libimlib_a_SOURCES = \
     jwindow.cpp jwindow.h \
     video.cpp video.h \
     event.cpp event.h \
-    mouse.h timing.h jdir.h visobj.h \
+    timing.h jdir.h visobj.h \
     $(NULL)
 
 INCLUDES = -I$(srcdir) -I$(srcdir)/.. $(SDL_CFLAGS)
