core: get rid of custom Min(), Max(), ERROR(), etc. and use the Lol Engine features instead.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,18 +61,18 @@ abuse_SOURCES = \
     ui/volumewindow.cpp ui/volumewindow.h \
     $(NULL)
 
-EXTRALIBS = lisp/liblisp.a sdlport/libsdlport.a imlib/libimlib.a net/libnet.a
-abuse_LDADD = $(EXTRALIBS) $(LOL_LIBS)
-abuse_DEPENDENCIES = $(EXTRALIBS)
+abuse_CPPFLAGS = $(AM_CPPFLAGS) -DHAVE_OPENGL \
+    -I$(srcdir) -I$(srcdir)/lisp -I$(srcdir)/imlib -I$(srcdir)/net
+abuse_LDFLAGS = lisp/liblisp.a sdlport/libsdlport.a imlib/libimlib.a net/libnet.a $(AM_LDFLAGS)
+abuse_LDADD = @LOL_LIBS@
+abuse_DEPENDENCIES = @LOL_DEPS@
 
 abuse_tool_SOURCES = \
     tool/abuse-tool.cpp \
     crc.cpp crc.h
-abuse_tool_LDADD = imlib/libimlib.a
-abuse_tool_DEPENDENCIES = $(abuse_tool_LDADD)
-
-INCLUDES = -I$(srcdir) -I$(srcdir)/lisp -I$(srcdir)/imlib \
-           -I$(srcdir)/net $(SDL_CFLAGS)
-
-CPPFLAGS = @CPPFLAGS@ -DNO_CHECK
+abuse_tool_CPPFLAGS = $(AM_CPPFLAGS) -DHAVE_OPENGL \
+    -I$(srcdir) -I$(srcdir)/lisp -I$(srcdir)/imlib -I$(srcdir)/net
+abuse_tool_LDFLAGS = imlib/libimlib.a $(AM_LDFLAGS)
+abuse_tool_LDADD = @LOL_LIBS@
+abuse_tool_DEPENDENCIES = @LOL_DEPS@
 
